# tactile_tracking

./: .gitignore  README.md  setup.py
tactile_model/: MUJOCO_LOG.TXT  collect_contact_data.py  dataset.py  hand_model.py  main.py  make_touch_sensor.py  touch_grid.xml  track_contact_algo.py  visualize_dataset.py
tactile_model/Leap/: Leap_hand.xml  Leap_hand_kin.urdf  Leap_hand_kin.xml  assets.xml  debug.xml  env-v1.xml  make_touch_sensor.py  my_mjcf2urdf.py  readme.md  right_hand.xml  right_hand_with_touch.xml  scene_right.xml  touch_sensor_array.xml
tactile_model/Leap/leap_ws/src/leap_description/: CMakeLists.txt  package.xml  right_hand.xml
tactile_model/Leap/leap_ws/src/leap_mujoco/: CMakeLists.txt  package.xml
tactile_model/Leap/leap_ws/src/leap_mujoco/config/: leap_control.yaml
tactile_model/Leap/leap_ws/src/leap_mujoco/launch/: leap.launch
tactile_model/envs/: __init__.py  contact_v1.py  mujoco3_env.py
tactile_model/model/: best_forward_model.pt  best_inverse_model.pt  best_model.pt  scaler.pkl
tactile_model/scripts/: main_tactile_tracking.py
tactile_model/train/: sensor_model.py  train_double_model.py  train_model.py
tactile_model/utils/: math_utils.py  utils.py
