<?xml version="1.0"?>
<package>
  <name>leap_description</name>
  <version>1.0.0</version>
  <description>leap_description</description>
  <maintainer email="jyp23@mails.tsinghua.edu.cn">Yongpeng Jiang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>